--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdTeacherAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdTeacherAddEntity.xaml
@@ -46,6 +46,11 @@
                                     <ImageBrush ImageSource="{Binding PhotoTeachers, TargetNullValue= {StaticResource photo}}"/>
                                 </Ellipse.Fill>
                             </Ellipse>
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}">
+                                <Button.Content>
+                                    <Image />
+                                </Button.Content>
+                            </Button>
                         </StackPanel>
 
                         <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="" materialDesign:HintAssist.Hint="Логин"
@@ -60,14 +65,13 @@
                         
                     </StackPanel>
                     <StackPanel Grid.Column="1" HorizontalAlignment="Center" Width="300">
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Vertical">
                             
                         <Button Content="Дата рождения" Margin="0 10 0 0 " Background="#0070E0" Foreground="#FFFFFF" FontSize="18"
-                                materialDesign:ButtonAssist.CornerRadius="0" BorderBrush="Transparent" 
-                                Style="{StaticResource MaterialDesignOutlinedSecondaryLightButton}"/>
+                                materialDesign:ButtonAssist.CornerRadius="15" BorderBrush="Transparent"/>
                         <Button Content="Дата устройства" Margin="0 10 0 0 " Background="#0070E0" Foreground="#FFFFFF" FontSize="18"
-                                materialDesign:ButtonAssist.CornerRadius="0" BorderBrush="Transparent" 
-                                Style="{StaticResource MaterialDesignOutlinedSecondaryLightButton}"/>
+                                materialDesign:ButtonAssist.CornerRadius="15" BorderBrush="Transparent" 
+                                />
                         </StackPanel>
 
                         <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="" materialDesign:HintAssist.Hint="Имя" materialDesign:HintAssist.HintOpacity="1"
