--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdTeacherAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdTeacherAddEntity.xaml
@@ -46,9 +46,10 @@
                                     <ImageBrush ImageSource="{Binding PhotoTeachers, TargetNullValue= {StaticResource photo}}"/>
                                 </Ellipse.Fill>
                             </Ellipse>
-                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}">
+                            
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}" VerticalAlignment="Top" Width="40" Height="40" Margin="5 0 0 0 ">
                                 <Button.Content>
-                                    <Image />
+                                    <Image Source="/Resources/download.png" Margin="5"/>
                                 </Button.Content>
                             </Button>
                         </StackPanel>
@@ -68,7 +69,7 @@
                         <StackPanel Orientation="Vertical">
                             
                         <Button Content="Дата рождения" Margin="0 10 0 0 " Background="#0070E0" Foreground="#FFFFFF" FontSize="18"
-                                materialDesign:ButtonAssist.CornerRadius="15" BorderBrush="Transparent"/>
+                                materialDesign:ButtonAssist.CornerRadius="15" BorderBrush="Transparent" Click="clOpenCalendarHB"/>
                         <Button Content="Дата устройства" Margin="0 10 0 0 " Background="#0070E0" Foreground="#FFFFFF" FontSize="18"
                                 materialDesign:ButtonAssist.CornerRadius="15" BorderBrush="Transparent" 
                                 />
