--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdUserAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdUserAddEntity.xaml
@@ -39,26 +39,42 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
+                    
+                    
                     <StackPanel Grid.Column="0" HorizontalAlignment="Center" Width="260">
+                        <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+
+                            <Ellipse Width="120" Height="120" HorizontalAlignment="Left">
+                                <Ellipse.Fill>
+                                    <ImageBrush  x:Name="ImageTeacher" Stretch="UniformToFill" AlignmentY="Top"
+                                                 ImageSource="{Binding PhotoTeachers, TargetNullValue= {StaticResource photo}}"/>
+                                </Ellipse.Fill>
+                            </Ellipse>
+                            
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}" 
+                                    VerticalAlignment="Top" Width="40" Height="40" Margin="5 0 0 0 "
+                                    Click="clDomlodeImage">
+                                <Button.Content>
+                                    <Image Source="/Resources/download.png" Margin="5"/>
+                                </Button.Content>
+                            </Button>
+                        </StackPanel>
                         <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="" materialDesign:HintAssist.Hint="Логин"
                      materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27" materialDesign:HintAssist.HintOpacity="1"
                      />
                         <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="" materialDesign:HintAssist.Hint="Email"
                      materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0" materialDesign:HintAssist.HintOpacity="1"
                      />
-                        <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}" Margin="0 17 0 0"/>
+                        
                         <PasswordBox Style="{StaticResource MaterialDesignFloatingHintRevealPasswordBox}" Password="" materialDesign:HintAssist.Hint="Пароль"
                      materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27" materialDesign:HintAssist.HintOpacity="1"
                      />
-                        <StackPanel>
-                            <Button Content="Добавить" Background="#0070E0" Foreground="#FFFFFF" FontSize="18"
-                                materialDesign:ButtonAssist.CornerRadius="15" Width="120" BorderBrush="Transparent"/>
-                        </StackPanel>
+                        
                     </StackPanel>
                     <StackPanel Grid.Column="1" HorizontalAlignment="Center" Width="260">
 
                         <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="" materialDesign:HintAssist.Hint="Имя" materialDesign:HintAssist.HintOpacity="1"
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27 0 0"
+                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 0 0 0"
                      />
                         <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="" materialDesign:HintAssist.Hint="Фамилия" materialDesign:HintAssist.HintOpacity="1"
                      materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27"
@@ -66,6 +82,12 @@
                         <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="" materialDesign:HintAssist.Hint="Отчество" materialDesign:HintAssist.HintOpacity="1" 
                      materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0"
                      />
+                        <ComboBox x:Name="cbRoleUser" Style="{StaticResource MaterialDesignComboBox}" Margin="0 17 0 0"/>
+                        <StackPanel>
+                            <Button Content="Сохранить" Background="#0070E0" Foreground="#FFFFFF" FontSize="18"
+                                materialDesign:ButtonAssist.CornerRadius="15" Width="150" BorderBrush="Transparent"
+                                    Click="clSaveChangUser" Margin="0 20 0 0" HorizontalAlignment="Left"/>
+                        </StackPanel>
 
                     </StackPanel>
                 </Grid>
