--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdUserAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdUserAddEntity.xaml
@@ -6,8 +6,9 @@
         xmlns:local="clr-namespace:DIPloma.Window.wdAddUserEntity"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Добавления пользователя" Height="500" Width="800" ResizeMode="NoResize" FontSize="15" FontFamily="{DynamicResource MaterialDesignFont}"
-        
+        Title="Добавления пользователя" Height="500" Width="800" ResizeMode="NoResize" FontSize="15" 
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        IsVisibleChanged="isVisibleChandg1"
         >
     <Window.Resources>
         <ResourceDictionary>
