--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdStudentAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdStudentAddEntity.xaml
@@ -7,7 +7,9 @@
         
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="wdStudentAddEntity" Height="450" Width="800">
+        Title="wdStudentAddEntity" Height="450" Width="800"
+        IsVisibleChanged="visibleChanged"
+        >
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -22,7 +24,7 @@
             <RowDefinition Height="355*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#022D73">
-            <TextBlock Text="Добавить пользователя" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FFFFFF" FontSize="36"/>
+            <TextBlock Text="Добавить ученика" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FFFFFF" FontSize="36"/>
         </Grid>
         <Grid Grid.Row="1">
 
@@ -46,37 +48,32 @@
                             <Ellipse Width="100" Height="100" HorizontalAlignment="Left">
                                 <Ellipse.Fill>
                                     <ImageBrush  x:Name="ImageUser" Stretch="UniformToFill" AlignmentY="Top"
-                                                 ImageSource="{Binding PhotoUsers, TargetNullValue= {StaticResource photo}}"/>
+                                                 ImageSource="{StaticResource photo}"/>
                                 </Ellipse.Fill>
                             </Ellipse>
                             <!--EndImageBlok-->
                             
                         </StackPanel>
-                        <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding Login}" materialDesign:HintAssist.Hint="Логин"
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27" materialDesign:HintAssist.HintOpacity="1"
+                        <TextBox x:Name="tbName" TextChanged="tChangedName" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding NameStudent}" materialDesign:HintAssist.Hint="Имя" materialDesign:HintAssist.HintOpacity="1"
+                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 0 0 0"
                      />
-                        <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding Mail}" materialDesign:HintAssist.Hint="Email"
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0" materialDesign:HintAssist.HintOpacity="1"
+                        <TextBox x:Name="tbSurName" TextChanged="tCangetSurName" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding SurnameStudent}" materialDesign:HintAssist.Hint="Фамилия" materialDesign:HintAssist.HintOpacity="1"
+                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27"
                      />
-
-                        <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding Password}"  materialDesign:HintAssist.Hint="Пароль"
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27" materialDesign:HintAssist.HintOpacity="1"
+                        <TextBox x:Name="tbDobleName" TextChanged="tChangetDobleName" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding MiddleNameStudent}" materialDesign:HintAssist.Hint="Отчество" materialDesign:HintAssist.HintOpacity="1" 
+                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0"
                      />
 
                     </StackPanel>
                     <StackPanel Grid.Column="1" HorizontalAlignment="Center" Width="260">
 
-                        <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding NameStudent}" materialDesign:HintAssist.Hint="Имя" materialDesign:HintAssist.HintOpacity="1"
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 0 0 0"
-                     />
-                        <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding SurNameStudent}" materialDesign:HintAssist.Hint="Фамилия" materialDesign:HintAssist.HintOpacity="1"
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27"
-                     />
-                        <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding DobleNameStudent}" materialDesign:HintAssist.Hint="Отчество" materialDesign:HintAssist.HintOpacity="1" 
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0"
-                     />
-                        <ComboBox x:Name="cbRoleUser" Style="{StaticResource MaterialDesignComboBox}" SelectedItem="{Binding GroupNavigation}" 
+
+                        <ComboBox x:Name="cbGrops" Style="{StaticResource MaterialDesignComboBox}" SelectedItem="{Binding GroupNavigation}" 
                                   DisplayMemberPath="ClassNumber" Margin="0 17 0 0"/>
+
+                        
+                        <TextBlock x:Name="tbLogin" Text="Login" Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="0 20 0 0 "/>
+
                         <StackPanel>
                             <Button Content="Сохранить" Background="#0070E0" Foreground="#FFFFFF" FontSize="18"
                                 materialDesign:ButtonAssist.CornerRadius="15" Width="150" BorderBrush="Transparent"
