--- a/Wpf_core_diploma/Pages/lvAppMain.xaml
+++ b/Wpf_core_diploma/Pages/lvAppMain.xaml
@@ -15,44 +15,9 @@
         <Grid.Effect>
             <DropShadowEffect BlurRadius="30" ShadowDepth="1" Opacity="0.4"/>
         </Grid.Effect>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="1*"/>
-        </Grid.RowDefinitions>
+        
 
-        <Border MouseUp="muSerch2" Grid.Row="0" Height="37" VerticalAlignment="Top" CornerRadius="18">
-            <Border.Background>
-                <SolidColorBrush Opacity="0.5" Color="#7C7C7C"/>
-            </Border.Background>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock x:Name="tblock" MouseDown="mdSerch" Text="Поиск" VerticalAlignment="Center" Margin="20 0 0 0" FontSize="20" Foreground="#FFFFFF"/>
-                <TextBox x:Name="tbSerch" TextChanged="tcSerch" Foreground="#FFFFFF" SelectionTextBrush="Black" SelectionBrush="Black" BorderBrush="Transparent" Background="Transparent" Width="888" Margin="10 0 0 0">
-                    <TextBox.Style>
-                        <Style BasedOn="{StaticResource {x:Type TextBox}}" TargetType="{x:Type TextBox}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type TextBox}">
-                                        <Border x:Name="Bd" 
-                                        BorderBrush="{TemplateBinding BorderBrush}" 
-                                        BorderThickness="{TemplateBinding BorderThickness}" 
-                                        Background="{TemplateBinding Background}" 
-                                        SnapsToDevicePixels="true">
-                                            <ScrollViewer x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                                        </Border>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsEnabled" Value="false">
-                                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
-                                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
-            </StackPanel>
-        </Border>
+        
 
 
 
@@ -64,7 +29,7 @@
 
         <Border Grid.Row="1"  CornerRadius="7" >
             <Border.Background>
-                <SolidColorBrush Color="#7C7C7C" Opacity="0.5"/>
+                <SolidColorBrush Color="#FFFFFF" Opacity="0.5"/>
             </Border.Background>
 
             <ListView x:Name="lvMain"  
