--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdTeacherAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdTeacherAddEntity.xaml
@@ -53,7 +53,7 @@
                                     VerticalAlignment="Top" Width="40" Height="40" Margin="5 0 0 0 "
                                     Click="clDomlodeImage">
                                 <Button.Content>
-                                    <Image Source="/Resources/download.png" Margin="5"/>
+                                    <materialDesign:PackIcon Kind="download" Foreground="#FFFFFF"/>
                                 </Button.Content>
                             </Button>
                         </StackPanel>
